# contracts

./: .gitignore  Cargo.toml  readme.md
contracts/: readme.md
contracts/launchpad_contract/: Cargo.toml  lib.rs  my_launchpad.contract  my_launchpad.json  my_launchpad.wasm
contracts/launchpad_generator/: Cargo.toml  launchpad_generator.contract  launchpad_generator.json  launchpad_generator.wasm  lib.rs
contracts/lp_pool_contract/: Cargo.toml  lib.rs  my_lp_pool.contract  my_lp_pool.json
contracts/lp_pool_generator/: Cargo.toml  lib.rs  lp_pool_generator.contract  lp_pool_generator.json
contracts/nft_pool_contract/: Cargo.toml  lib.rs  my_nft_pool.contract  my_nft_pool.json  my_nft_pool.wasm
contracts/nft_pool_generator/: Cargo.toml  lib.rs  nft_pool_generator.contract  nft_pool_generator.json  nft_pool_generator.wasm
contracts/pool_contract/: Cargo.toml  lib.rs  my_pool.contract  my_pool.json  my_pool.wasm
contracts/pool_generator/: Cargo.toml  lib.rs  pool_generator.contract  pool_generator.json  pool_generator.wasm
contracts/private_sale/: Cargo.toml  lib.rs  private_sale.wasm
contracts/psp22_standard/: Cargo.toml  lib.rs  metadata.json  psp22_standard.contract  psp22_standard.json  psp22_standard.wasm
contracts/public_sale/: Cargo.toml  lib.rs  public_sale.wasm
contracts/token_contract/: Cargo.toml  lib.rs
contracts/token_generator/: Cargo.toml  lib.rs  metadata.json  token_generator.contract  token_generator.json  token_generator.wasm
contracts/token_sale/: Cargo.toml  lib.rs
contracts/token_standard/: Cargo.toml  lib.rs  metadata.json  token_standard.contract  token_standard.json  token_standard.wasm
docs/: contract_deployment_and_update_addresses_abis.md  technical_doc.md
impls/: mod.rs
impls/admin/: admin.rs  mod.rs
impls/generic_pool_contract/: data.rs  generic_pool_contract.rs  mod.rs
impls/generic_pool_generator/: data.rs  generic_pool_generator.rs  mod.rs
impls/nft_staking_list/: data.rs  mod.rs  nft_staking_list.rs
impls/token_manager/: data.rs  mod.rs  token_manager.rs
impls/token_mint_cap/: data.rs  mod.rs  token_mint_cap.rs
impls/upgradeable/: mod.rs  upgradeable.rs
inkwhale-contract/: Cargo.toml
inkwhale-contract/contracts/token-contract/: lib.rs
inkwhale-contract/impls/token/: data.rs  mod.rs  token.rs
inkwhale-contract/traits/: mod.rs  token.rs
inkwhale_contract/: .gitignore  Cargo.toml
inkwhale_contract/contracts/lp_pool_contract/: Cargo.toml  lib.rs
inkwhale_contract/contracts/lp_pool_generator/: lib.rs
inkwhale_contract/contracts/nft_pool_contract/: Cargo.toml  lib.rs
inkwhale_contract/contracts/nft_pool_generator/: lib.rs
inkwhale_contract/contracts/pool_contract/: lib.rs
inkwhale_contract/contracts/pool_generator/: Cargo.toml  lib.rs
inkwhale_contract/contracts/token-sale/: lib.rs
inkwhale_contract/contracts/token_contract/: Cargo.toml  lib.rs
inkwhale_contract/contracts/token_sale/: Cargo.toml  lib.rs
inkwhale_contract/docs/: apis.md  technical_doc.md
inkwhale_contract/impls/: mod.rs
inkwhale_contract/tests/: constants.ts  helpers.ts  package-lock.json  package.json  readme.md  token_sale_test.ts
inkwhale_contract/traits/: admin.rs  error.rs  generic_pool_contract.rs  generic_pool_generator.rs  mod.rs  nft_staking_list.rs  token_manager.rs  token_mint_cap.rs
lp-pool-contract/: Cargo.toml  lib.rs
lp-pool-generator/: Cargo.toml  lib.rs
nft-pool-contract/: Cargo.toml  lib.rs
nft-pool-generator/: Cargo.toml  lib.rs
op4_contracts/: .gitignore  Cargo.toml
op4_contracts/contracts/inw_swap/: Cargo.toml  inw_swap.contract  inw_swap.json  lib.rs
op4_contracts/contracts/lp_pool_contract/: Cargo.toml  lib.rs  metadata.json  my_lp_pool.contract  my_lp_pool.json  my_lp_pool.wasm
op4_contracts/contracts/lp_pool_generator/: Cargo.toml  lib.rs  lp_pool_generator.contract  lp_pool_generator.json  lp_pool_generator.wasm  metadata.json
pool-contract/: Cargo.toml  lib.rs
pool-generator/: Cargo.toml  lib.rs
src/: lib.rs
src/impls/: mod.rs
src/impls/admin/: admin.rs
src/traits/: admin.rs  error.rs  generic_pool_contract.rs  generic_pool_generator.rs  generic_token_sale.rs  launchpad_contract.rs  launchpad_generator.rs  mod.rs  nft_staking_list.rs  psp22_standard.rs  token_manager.rs  token_sale.rs  upgradeable.rs
tests/: 1.inw_contract_test.ts  1.token_sale_test.ts  10.launchpad_contract_op4_test.ts  2.token_contract_test.ts  3.token_generator_test.ts  4.pool_contract_test.ts  5.pool_generator_test.ts  6.lp_pool_contract_test.ts  6.nft_pool_contract_test.ts  7.lp_pool_generator.ts  7.nft_pool_generator_test.ts  8.nft_pool_contract_test.ts  9.launchpad_generator_test.ts  9.nft_pool_generator_test.ts  constants.ts  helpers.ts  package-lock.json  package.json  readme.md
tests/artifacts/: launchpad_contract_op4.contract  launchpad_contract_op4.json  launchpad_generator.contract  launchpad_generator.json  launchpad_generator_op4.contract  launchpad_generator_op4.json  lp_pool_generator.contract  lp_pool_generator.json  my_azero_staking.contract  my_azero_staking.json  my_interest_distribution.json  my_launchpad.contract  my_launchpad.json  my_launchpad_op4.contract  my_launchpad_op4.json  my_lp_pool.contract  my_lp_pool.json  my_nft_pool.contract  my_nft_pool.json  my_pool.contract  my_pool.json  my_psp22.contract  my_psp22.json  my_psp22_sale.contract  my_psp22_sale.json  nft_pool_generator.contract  nft_pool_generator.json  pool_generator.contract  pool_generator.json  private_sale.contract  private_sale.json  psp22_standard.contract  psp22_standard_op4.contract  psp22_standard_op4.json  psp34_nft.contract  psp34_nft.json  public_sale.contract  public_sale.json  token_generator.contract  token_generator.json  (+2 more)
tests/tested/: token_contract_test.ts
tests/tmp/: 8.nft_pool_contract_test.ts  9.nft_pool_generator_test.ts
token-contract/: Cargo.toml  lib.rs
token-generator/: Cargo.toml  lib.rs
token-sale/: Cargo.toml  lib.rs
traits/: admin.rs  error.rs  generic_pool_contract.rs  generic_pool_generator.rs  mod.rs  nft_staking_list.rs  token_mint_cap.rs  upgradeable.rs
(+464 files in other folders)
