[package]
name = "inkwhale_project"
version = "1.0.0"
authors = ["InkWhale <admin@artzero.io>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { tag = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22", "ownable", "access_control"] }

[lib]
name = "inkwhale_project"
path = "src/lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
	"ink/std",
	"scale/std",
	"scale-info/std",
	"openbrush/std",
]

ink-as-dependency = []

[profile.dev]
codegen-units = 16
overflow-checks = false

[profile.release]
overflow-checks = false
