[package]
name = "launchpad_generator"
version = "1.0.0"
authors = ["InkWhale <admin@artzero.io>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# These dependencies
inkwhale_project = { path = "../..", default-features = false }
openbrush = { tag = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22", "ownable", "access_control"] }
my_launchpad = { path = "../launchpad_contract", default-features = false, features = ["ink-as-dependency"]  }

[lib]
name = "launchpad_generator"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation and for unit test.
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "inkwhale_project/std",
    "openbrush/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16