[package]
name = "nft_pool_generator"
version = "0.1.0"
authors = ["Support <contact@artzero.io>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/paritytech/ink", rev = "4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# These dependencies
inkwhale_project = { path = "../..", default-features = false }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", tag = "3.0.0-beta", default-features = false, features = ["ownable","psp22"] }
my_nft_pool = { path = "../nft_pool_contract", default-features = false, features = ["ink-as-dependency"]  }

[lib]
name = "nft_pool_generator"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation and for unit test.
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "inkwhale_project/std",
    "openbrush/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
