[package]
name = "nft_pool_generator"
version = "1.0.0"
authors = ["InkWhale <admin@artzero.io>"]
edition = "2021"

[dependencies]
ink = { version = "~4.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# These dependencies
inkwhale_project = { path = "../..", default-features = false }
primitive-types = { version = "0.12.0", default-features = false, features = ["codec", "scale-info"] }
openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["ownable","psp22", "access_control"] }
my_nft_pool = { path = "../nft_pool_contract", default-features = false, features = ["ink-as-dependency"]  }

[lib]
name = "nft_pool_generator"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation and for unit test.
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "inkwhale_project/std",
    "openbrush/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16