[package]
name = "lp_pool_generator"
version = "1.0.1"
authors = ["Support <contact@artzero.io>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# These dependencies
inkwhale_project = { path = "../..", default-features = false }
openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", tag = "4.0.0-beta", default-features = false, features = ["ownable", "psp22"] }
my_lp_pool = { path = "../lp_pool_contract", default-features = false, features = ["ink-as-dependency"]  }

[lib]
name = "lp_pool_generator"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation and for unit test.
    "lib"
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "inkwhale_project/std",
    "openbrush/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16

[profile.release]
overflow-checks = false